Revert "Start tracking cache contents"
This reverts commit b416c81f70475e79a896983a4eac9629aefeb7aa.

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ repo/**
 !repo/local
 !repo/local/**
 !repo/cache
+repo/cache/**
 
 # Make sure we keep only xci files in ip src subfolder
 src/ip/*/**
